--- a/todoapp/app/src/main/res/layout/statistics_frag.xml
+++ b/todoapp/app/src/main/res/layout/statistics_frag.xml
@@ -16,7 +16,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-
         <import type="android.view.View" />
 
         <variable
@@ -33,7 +32,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/loading"
@@ -47,21 +46,21 @@
         android:orientation="vertical"
         android:visibility="@{stats.dataLoading ? View.GONE : View.VISIBLE}">
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/statistics_no_tasks"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:visibility="@{stats.empty ? View.VISIBLE : View.GONE}" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{stats.numberOfActiveTasks}"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:visibility="@{stats.empty ? View.GONE : View.VISIBLE}" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{stats.numberOfCompletedTasks}"
