--- a/todoapp/app/src/main/res/layout/tasks_frag.xml
+++ b/todoapp/app/src/main/res/layout/tasks_frag.xml
@@ -17,13 +17,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <import type="android.view.View" />
 
         <variable
             name="viewmodel"
             type="com.example.android.architecture.blueprints.todoapp.tasks.TasksViewModel" />
-
     </data>
 
 <com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout
@@ -47,7 +45,7 @@
             android:orientation="vertical"
             android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}">
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/filteringLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -75,14 +73,14 @@
             android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}">
 
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/noTasksIcon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
                 android:src="@{viewmodel.noTaskIconRes}" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/noTasksMain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -90,7 +88,7 @@
                 android:text="@{viewmodel.noTasksLabel}"
                 android:layout_marginBottom="@dimen/list_item_padding"/>
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/noTasksAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
