--- a/todoapp/app/src/main/res/layout/taskdetail_frag.xml
+++ b/todoapp/app/src/main/res/layout/taskdetail_frag.xml
@@ -51,7 +51,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:visibility="@{viewmodel.dataAvailable ? View.GONE : View.VISIBLE}">
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/no_data"
@@ -68,7 +68,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:visibility="@{viewmodel.dataAvailable ? View.VISIBLE : View.GONE}">
 
-            <CheckBox
+            <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/task_detail_complete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:checked="@={viewmodel.completed}" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/task_detail_title"
                 android:layout_toRightOf="@id/task_detail_complete"
                 android:layout_width="match_parent"
@@ -84,7 +84,7 @@
                 android:text="@{viewmodel.title}"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/task_detail_description"
                 android:layout_toRightOf="@id/task_detail_complete"
                 android:layout_below="@id/task_detail_title"
