--- a/todoapp/app/src/main/res/layout/tasks_frag.xml
+++ b/todoapp/app/src/main/res/layout/tasks_frag.xml
@@ -51,7 +51,7 @@
             android:orientation="vertical"
             android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}">
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/filteringLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -79,14 +79,14 @@
             android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}">
 
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/noTasksIcon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
                 android:src="@{viewmodel.noTaskIconRes}" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/noTasksMain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
                 android:text="@{viewmodel.noTasksLabel}"
                 android:layout_marginBottom="@dimen/list_item_padding"/>
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/noTasksAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
