--- a/todoapp/app/src/main/res/layout/addtask_act.xml
+++ b/todoapp/app/src/main/res/layout/addtask_act.xml
@@ -69,10 +69,9 @@
                 android:src="@drawable/ic_add"
                 app:fabSize="normal"
                 app:layout_anchor="@id/contentFrame"
-                app:layout_anchorGravity="bottom|right|end" />
+                app:layout_anchorGravity="bottom|right|end" >
+            </com.google.android.material.floatingactionbutton.FloatingActionButton>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
     </androidx.appcompat.widget.LinearLayoutCompat>
-
 </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
