--- a/todoapp/app/src/main/res/layout/tasks_frag.xml
+++ b/todoapp/app/src/main/res/layout/tasks_frag.xml
@@ -13,11 +13,29 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<com.example.android.architecture.blueprints.todoapp.tasks.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="view"
+            type="com.example.android.architecture.blueprints.todoapp.tasks.TasksFragment" />
+
+        <variable
+            name="viewmodel"
+            type="com.example.android.architecture.blueprints.todoapp.tasks.TasksViewModel" />
+
+    </data>
+
+<com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout
     android:id="@+id/refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:onRefresh="@{viewmodel}"
+    app:refreshing="@{viewmodel.dataLoading}">
 
     <RelativeLayout
         android:id="@+id/tasksContainer"
@@ -30,9 +48,10 @@
             android:id="@+id/tasksLL"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}">
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/filteringLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -41,10 +60,12 @@
                 android:layout_marginLeft="@dimen/list_item_padding"
                 android:layout_marginRight="@dimen/list_item_padding"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin" />
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:text="@{viewmodel.currentFilteringLabel}" />
 
             <ListView
                 android:id="@+id/tasks_list"
+                app:items="@{viewmodel.items}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -54,33 +75,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}">
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/noTasksIcon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_assignment_turned_in_24dp" />
+                android:src="@{viewmodel.noTaskIconRes}" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/noTasksMain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/no_tasks_all"
-                android:layout_marginBottom="@dimen/list_item_padding" />
+                android:text="@{viewmodel.noTasksLabel}"
+                android:layout_marginBottom="@dimen/list_item_padding"/>
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/noTasksAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
                 android:background="@drawable/touch_feedback"
                 android:gravity="center"
-                android:text="@string/no_tasks_add" />
+                android:text="@string/no_tasks_add"
+                android:onClick="@{() -> viewmodel.addNewTask()}"
+                android:visibility="@{viewmodel.tasksAddViewVisible ? View.VISIBLE : View.GONE}" />
 
         </LinearLayout>
     </RelativeLayout>
-</com.example.android.architecture.blueprints.todoapp.tasks.ScrollChildSwipeRefreshLayout>
+</com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout>
+</layout>
 
